# godel-concept-ladder

./: .gitignore  CLAUDE.md  CONTENT_NOTES.md  METHODOLOGY.md  Makefile  OVERNIGHT_PLAN.md  README.md  RUNNING_EXAMPLE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: HANDOFF.md  handoff.yml
backend/: README.md  assessments.json  pyproject.toml
backend/eval/: FINDINGS.md  cases.json  run.py
backend/eval/cases/: cap-computability.json  cap-encode.json  cap-evaluate-N.json  cap-first.json  cap-godel-sentence.json  cap-object-meta.json  cap-proof-graph.json  cap-prov-predicate.json  cap-prove-224.json  cap-second.json  cap-sound-complete.json
backend/godel_judge/: __init__.py  app.py  judge.py  models.py
backend/godel_judge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/godel_judge/prompts/: judge.yaml
backend/tests/: test_judge.py
docs/: ADR-0001-skill-dag-pivot.md  ADR-0002-concept-dependency-dag.md  ADR-0003-derive-skillmap-from-concept-graph.md  ADR-0004-methodology-concept-graph-to-skillmap.md  ADR-0005-typed-edges-llm-in-the-loop.md  ADR-0006-examples-and-explanatory-devices.md  ADR-0007-prerequisite-pretests.md  ADR-0008-content-craft-tensions-skill-focus.md  COMPLETENESS.md  CONTENT_REVIEW.md  DISCUSSION-2026-06-22.md  EDGE_REVIEW.md  MIGRATION_PLAN.md  ROADMAP.md  SPRINT.md  SYSTEM_AUDIT.md  edge-verdicts.json  wiki_manifest.yaml
scripts/: certify.mjs  completeness-report.mjs  derive-report.mjs  e2e-gate.mjs  edge-review-gen.mjs  generate.mjs  prose-closure.mjs  screenshots.mjs  (+2 more)
(+51 files in other folders)
