[project]
name = "godel-judge"
version = "0.1.0"
description = "LLM-graded achievement judge for the Gödel skill tree"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "httpx>=0.27",
  "instructor>=1.0",
]
# llm_client (and data_contracts) are installed editable from ~/projects:
#   pip install -e ~/projects/llm_client

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["godel_judge*"]
